--- a/public/css/master.css
+++ b/public/css/master.css
@@ -47,7 +47,7 @@
 	--main-text-shadow: 0px 0px 4px rgb(0, 0, 0);
 
 	/* Style config settings */
-	--user-style: #1267ce;
+	--user-style: #7b1cc2;
 	--user-style-02: #000a0f;
 	--user-style-03: #fff;
 	--user-style-04: #fff;
