--- a/public/css/css-sort/sort.css
+++ b/public/css/css-sort/sort.css
@@ -610,7 +610,7 @@ input:focus::-webkit-input-placeholder {
 	margin: 0.5em;
 }
 
-.isanDispalyDiv {
+.tpsDisplayDiv {
 	pointer-events: none;
 	background-color: rgb(0, 10, 15);
 	width: -webkit-fill-available;
@@ -639,7 +639,7 @@ input:focus::-webkit-input-placeholder {
 	width: 100%;
 }
 
-.isanDispalyVal {
+.tpsDisplayVal {
 	/* font-family: var(--main-font-VT323); */
 	/* Specifically using the font used in game */
 	font-family: Telegrama;
